# provenance-log

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/wast/: README.md  first.wast  lock.wast  unlock.wast
src/: entry.rs  error.rs  key.rs  lib.rs  lipmaa.rs  log.rs  op.rs  pairs.rs  script.rs  stack.rs  value.rs
src/log/: rhai.rs  wsm.rs
src/serde/: mod.rs
src/serde/de/: entry.rs  key.rs  log.rs  mod.rs  op.rs  script.rs  value.rs
src/serde/ser/: entry.rs  key.rs  log.rs  mod.rs  op.rs  script.rs  value.rs
