[package]
name = "provenance-log"
version = "1.0.13"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
edition = "2021"
description = "Programmable cryptographic provenance logs"
repository = "https://github.com/cryptidtech/provenance-log.git"
readme = "README.md"
keywords = ["provenance", "provenance logs", "multiformats"]
license = "Functional Source License 1.1"

[features]
default = ["serde"]
dag_cbor = ["serde_cbor", "serde_cbor/tags", "multicid/dag_cbor"]

[dependencies]
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicid = { version = "1.0", git = "https://github.com/cryptidtech/multicid.git" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/cryptidtech/multikey.git" }
multisig = { version = "1.0", git = "https://github.com/cryptidtech/multisig.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
rand = "0.8"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_cbor = { version = "0.11", optional = true }
thiserror = "1.0"
wacc = { version = "1.0", git = "ssh://git@github.com/cryptidtech/wacc.git" }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
serde_cbor = "0.11"
serde_json = "1.0"
serde_test = "1.0"
