[package]
name = "provenance-log"
version = "1.0.23"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
edition = "2021"
description = "Programmable cryptographic provenance logs"
repository = "https://github.com/cryptidtech/provenance-log.git"
readme = "README.md"
keywords = ["provenance", "provenance logs", "multiformats"]
license = "Functional Source License 1.1"

[features]
default = ["serde", "rhai"]
dag_cbor = ["serde_cbor", "serde_cbor/tags", "multicid/dag_cbor"]
rhai = ["dep:comrade-core"]
wacc = ["dep:wacc"]

[dependencies]
log = "0.4.22"
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicid = { version = "1.0", git = "https://github.com/DougAnderson444/multicid", branch = "patch" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/DougAnderson444/multikey.git" }
multisig = { version = "1.0", git = "https://github.com/DougAnderson444/multisig.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
rand = "0.8"
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
serde_cbor = { version = "0.11", optional = true }
test-log = "0.2.16"
thiserror = "1.0"
# comrade is the wasm32 compatible wacc alternative
comrade-core = { git = "ssh://git@github.com/DougAnderson444/comrade.git", optional = true }
tracing = "0.1.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wacc = { version = "1.0", git = "ssh://git@github.com/cryptidtech/wacc.git", optional = true }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
serde_cbor = "0.11"
serde_json = "1.0"
serde_test = "1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch.'https://github.com/cryptidtech/multicid.git']
multicid = { git = "https://github.com/DougAnderson444/multicid", branch = "patch" }
